read config options from environment variables
